--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,12 @@
 # OpenAI Configuration
 OPENAI_API_KEY=your-openai-api-key-here
 
+# LangSmith Configuration (for observability and tracing)
+LANGCHAIN_TRACING_V2=true
+LANGCHAIN_ENDPOINT=https://api.smith.langchain.com
+LANGCHAIN_API_KEY=your-langsmith-api-key-here
+LANGCHAIN_PROJECT=a2a-conversation
+
 # LLM Configuration
 LLM_MODEL=gpt-4
 LLM_TEMPERATURE=0.8
